tests/NormalTests/paczka1/small_fuzzy/38736113.err
Error in line 1: fY6WnsAT S647 95,9
Error in line 13: JdrE S607 9I,1
